src/components/Note.css
.note-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 0;
  z-index: 10;
}

.note-container {
  position: absolute;
  z-index: 10;
}

.note {
  background-color: #fff4b5;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  padding: 10px;
  cursor: default;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  position: absolute;
  overflow: hidden;
}

.controls {
  display: flex;
  justify-content: space-between;
  margin-bottom: 5px;
}

.handle {
  flex-grow: 1;
  height: 20px;
  background-color: #fdeb84;
  border-radius: 1px;
  cursor: move;
}

.delete-button {
  border-radius: 1px;
  background-color: #ff4444;
  position: absolute;
  height: 20px;
  right: 10px;
  /* background: none; */
  border: none;
  color: #fafafa;
  font-weight: bold;
  cursor: pointer;
  padding: 0 5px;
}

.note-content {
  margin-top: 10px;
  flex-grow: 1;
  overflow: auto;
}

.todo-text {
  color: #333;
  font-weight: 600;
  margin: 0;
  padding: 5px;
  width: 100%;
  box-sizing: border-box;
}

input.todo-text {
  border: 1px dashed #aaa;
  background: transparent;
  outline: none;
  font: inherit;
}

.coordinates {
  font-size: 10px;
  color: #999;
  text-align: right;
  margin: 0;
}

/* Style for the resizable handle */
.react-resizable-handle {
  position: absolute;
  width: 20px;
  height: 20px;
  bottom: 0;
  right: 0;
  background-color: transparent;
  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="6" height="6"><path d="M6 6H0V4.2H4.2V0H6z" opacity=".3"/></svg>');
  background-position: bottom right;
  background-repeat: no-repeat;
  cursor: se-resize;
}

